<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BookBus">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <Spinner
                    android:id="@+id/spinner_from"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_black_boarder" />

                <Spinner
                    android:id="@+id/spinner_to"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_black_boarder" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/softGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/departure_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/departure_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/departure_date"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_black_boarder"
                    android:text="@string/select_one" />

                <Spinner
                    android:id="@+id/spinner_time"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/spinner_black_boarder" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/softGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/passenger"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="1">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.2"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/white"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <ImageView
                        android:id="@+id/minus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_iconmonstr_minus" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <TextView
                    android:id="@+id/passenger_count"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.2"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/white"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">


                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_iconmonstr_plus" />


                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/softGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/payment"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/spinner_payment"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/spinner_black_boarder" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/white"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/search_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_button"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/book_bus_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>